[package]
name = "feca"
version = "0.1.0"
edition = "2021"
default-run = "feca"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
felis = { path = "../felis" }
catus = { path = "../catus" }
crosscom = { path = "../crosscom/runtime/rust" }
tl = "0.6.0"
winit = "0.26.1"
raw-window-handle = "0.4.2"
