[package]
name = "feca"
version = "0.1.0"
edition = "2021"
default-run = "feca"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
felis = { path = "../felis" }
catus = { path = "../catus" }
crosscom = { path = "../crosscom/runtime/rust" }
tl = "0.6.0"
winit = "0.27"
raw-window-handle = "0.5"
pango = "0.15"
pangocairo = "0.15"
chrono = "0.4"

[dependencies.cairo-rs]
version = "0.15"
features = ["win32-surface"]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[build-dependencies]
cc = "1.0"

