[package]
name = "feca"
version = "0.1.0"
edition = "2021"
default-run = "feca"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
catus = { path = "../catus" }
chrono = "0.4"
crosscom = { path = "../crosscom/runtime/rust" }
felis = { path = "../felis" }
pango = "0.15"
pangocairo = "0.15"
raw-window-handle = "0.5"
reqwest = { version = "0.11", features = ["json"] }
tl = "0.6.0"
tokio = { version = "1", features = ["full"] }
url = "2"
winit = "0.27"

[dependencies.cairo-rs]
version = "0.15"
features = ["win32-surface"]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[build-dependencies]
cc = "1.0"

