[package]
name = "felis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tl = "0.6.0"
pango = "0.15"
pangocairo = "0.15"
winit = "0.27"
raw-window-handle = "0.5"
paste = "1.0"
xcdt = { path = "../xcdt" }
crosscom = { path = "../crosscom/runtime/rust" }
linkme = "0.2"
uuid = "0.8"
nom = "7.1.1"
image = "0.24"

[dependencies.cairo-rs]
version = "0.15"
features = ["win32-surface", "png"]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
